<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
    </group>


    <group android:checkableBehavior="single">
        <item android:title="@string/menu_tools">
            <menu>
                <item
                    android:id="@+id/nav_iv"
                    android:icon="@drawable/ic_menu_pvp"
                    android:title="@string/menu_iv_calc" />
                <item
                    android:id="@+id/nav_cd"
                    android:icon="@drawable/ic_menu_cooldown"
                    android:title="@string/menu_cd_calc" />
                <item
                    android:id="@+id/nav_extras"
                    android:icon="@drawable/ic_menu_extra"
                    android:title="@string/menu_extra" />
            </menu>
        </item>
    </group>


</menu>