<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mfpe.rocketpvp.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_iv"
        android:name="com.mfpe.rocketpvp.ui.IvFragment"
        android:label="@string/menu_iv_calc"
        tools:layout="@layout/fragment_ivxml" />

    <fragment
        android:id="@+id/nav_cd"
        android:name="com.mfpe.rocketpvp.ui.CooldownFragment"
        android:label="@string/menu_cd_calc"
        tools:layout="@layout/fragment_cooldown" />


    <fragment
        android:id="@+id/nav_extras"
        android:name="com.mfpe.rocketpvp.ui.ExtrasFragment"
        android:label="@string/menu_extra"
        tools:layout="@layout/fragment_extras" />


</navigation>