<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cvRankings"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/extrafragment_rankingpvp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/largeBoldTextViewStyle"/>
                    <TextView
                        android:layout_marginTop="@dimen/divider_margin"
                        android:text="@string/extrafragment_rankingpvpdesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/normalTextViewStyle"/>
                </LinearLayout>

                <ImageView
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_detail_arrow"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cvFastMoves"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/extrafragment_fastmoves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/largeBoldTextViewStyle"/>
                    <TextView
                        android:layout_marginTop="@dimen/divider_margin"
                        android:text="@string/extrafragment_fastmovesdesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/normalTextViewStyle"/>
                </LinearLayout>

                <ImageView
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_detail_arrow"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cvChargeMoves"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/extrafragment_chargemoves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/largeBoldTextViewStyle"/>
                    <TextView
                        android:layout_marginTop="@dimen/divider_margin"
                        android:text="@string/extrafragment_chargemovesdesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/normalTextViewStyle"/>
                </LinearLayout>

                <ImageView
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_detail_arrow"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cvLegacyMoves"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/extrafragment_legacymoves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/largeBoldTextViewStyle"/>
                    <TextView
                        android:layout_marginTop="@dimen/divider_margin"
                        android:text="@string/extrafragment_legacymovesdesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        style="@style/normalTextViewStyle"/>
                </LinearLayout>

                <ImageView
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_detail_arrow"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>